--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "gltf-import-export",
+  "name": "najadojo-gltf-import-export",
   "version": "1.0.0",
   "description": "A Node.js module to convert between GLB and GLTF files.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/najadojo/gltf-import-export/issues"
   },
-  "homepage": "https://github.com/najadojo/gltf-import-export#readme"
+  "homepage": "https://github.com/najadojo/gltf-import-export#readme",
+  "devDependencies": {
+    "@types/node": "^7.0.12",
+    "tslint": "^5.0.0",
+    "typescript": "^2.6.2"
+  }
 }
